--- a/css/style.css
+++ b/css/style.css
@@ -431,3 +431,198 @@ p {
     line-height: 22px;
     color: #0178C0;
 }
+.poster__link {
+    width: 159px;
+    height: 32px;
+    border: 1px solid #0178C0;
+    box-sizing: border-box;
+    border-radius: 16px;
+    font-size: 14px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    align-self: center;
+    margin: 60px 0px;
+    color: #0178C0;
+    cursor: pointer;
+    transition: all .3s;
+}
+.poster__link:hover {
+    background-color: blue;
+    color: #ffffff;
+}
+
+/*Активные квесты*/
+.active-quests {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-bottom: 60px;
+}
+.active-quests__body {
+    width: 100%;
+    max-width: 1200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.active-quests__ttile-block {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 30px;
+}
+.active-quests__wave-block {
+    width: 55px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    position: relative;
+    margin-right: 10px;
+}
+.active-quests__wave-block::before {
+    content: url(../img/blocks/wave.png);
+    width: 55px;
+    position: absolute;
+    top: -15px;
+}
+.active-quests__wave-block::after {
+    content: url(../img/blocks/wave.png);
+    width: 55px;
+    position: absolute;
+    top: -3px;
+}
+.active-quests__ttile {
+    font-weight: 600;
+    font-size: 36px;
+    text-transform: uppercase;
+    color: #08151D;
+    margin-right: 25px;
+}
+.active-quests__list {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+    flex-wrap: wrap;
+}
+.active-quests__list li {
+    margin-bottom: 10px;
+}
+.active-quests__item {
+    width: 290px;
+    height: 185px;
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    transition: all .3s;
+}
+.active-quests__item:hover {
+    transform: scale(1.1);
+}
+.active-quests__item img {
+    width: 100%;
+    height: auto;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+}
+.active-quests__item span {
+    position: relative;
+    z-index: 1;
+}
+.active-quests__name {
+    font-size: 22px;
+    line-height: 22px;
+    text-transform: uppercase;
+    color: #FFFFFF;
+    font-weight: 700;
+    margin-bottom: 10px;
+}
+.active-quests__count {
+    font-size: 18px;
+    line-height: 25px;
+    text-align: center;
+    color: #FFFFFF;
+}
+
+
+
+/*популярные квесты*/
+.popular-quests {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+.popular-quests__body {
+    width: 100%;
+    max-width: 1200px;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+.popular-quests__ttile-block {
+    width: 100%;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    margin-bottom: 30px;
+}
+.popular-quests__wave-block {
+    width: 55px;
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+    position: relative;
+    margin-right: 10px;
+}
+.popular-quests__wave-block::before {
+    content: url(../img/blocks/wave.png);
+    width: 55px;
+    position: absolute;
+    top: -15px;
+}
+.popular-quests__wave-block::after {
+    content: url(../img/blocks/wave.png);
+    width: 55px;
+    position: absolute;
+    top: -3px;
+}
+.popular-quests__ttile {
+    font-weight: 600;
+    font-size: 36px;
+    text-transform: uppercase;
+    color: #08151D;
+    margin-right: 25px;
+    align-self: flex-start;
+}
+.popular-quests__list {
+    width: 100%;
+    display: flex;
+    justify-content: space-between;
+    align-items: stretch;
+    flex-wrap: wrap;
+}
+.popular-quests__list li {
+    width: 290px;
+}
+.popular-quests__item {
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: center;
+}
+.popular-quests__image {
+    width: 100%;
+}
